kubernetes/clusters/macmini/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - name: sonarr-ui
      protocol: TCP
      port: 8989
      targetPort: 8989
  type: ClusterIP
  clusterIP: None
