kubernetes/clusters/macmini/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.service.blizzard.consul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
